@@ -1,4 +1,4 @@
-Manual positioning of diagram link labels (and better default positioning)
+Improve diagram link labels positioning
 Z-index in diagrams
 Crossing diagram arrows for the one with higher z-index
 Display pictures on the map
@@ -6,4 +6,3 @@ Half-broken diagram links routing with sequences
 Serialize undo operations
 Arbitrary SVG shapes
 Enable html in floating text boxes
-Position frame labels up or down
